--- a/deploy/docker/hubserving/cpu/Dockerfile
+++ b/deploy/docker/hubserving/cpu/Dockerfile
@@ -10,18 +10,18 @@ RUN pip3.7 install paddlehub --upgrade -i https://pypi.tuna.tsinghua.edu.cn/simp
 
 RUN git clone https://gitee.com/PaddlePaddle/PaddleOCR
 
-WORKDIR /PaddleOCR
+WORKDIR /home/PaddleOCR
 
 RUN pip3.7 install -r requirments.txt -i https://pypi.tuna.tsinghua.edu.cn/simple
 
-RUN mkdir -p /PaddleOCR/inference
+RUN mkdir -p /home/PaddleOCR/inference
 # Download orc detect model(light version). if you want to change normal version, you can change ch_det_mv3_db_infer to ch_det_r50_vd_db_infer, also remember change det_model_dir in deploy/hubserving/ocr_system/params.py）
-ADD https://paddleocr.bj.bcebos.com/ch_models/ch_det_mv3_db_infer.tar /PaddleOCR/inference
-RUN tar xf /PaddleOCR/inference/ch_det_mv3_db_infer.tar -C /PaddleOCR/inference
+ADD https://paddleocr.bj.bcebos.com/ch_models/ch_det_mv3_db_infer.tar /home/PaddleOCR/inference
+RUN tar xf /home/PaddleOCR/inference/ch_det_mv3_db_infer.tar -C /home/PaddleOCR/inference
 
 # Download orc recognition model(light version). If you want to change normal version, you can change ch_rec_mv3_crnn_infer to ch_rec_r34_vd_crnn_enhance_infer, also remember change rec_model_dir in deploy/hubserving/ocr_system/params.py）
-ADD https://paddleocr.bj.bcebos.com/ch_models/ch_rec_mv3_crnn_infer.tar /PaddleOCR/inference
-RUN tar xf /PaddleOCR/inference/ch_rec_mv3_crnn_infer.tar -C /PaddleOCR/inference
+ADD https://paddleocr.bj.bcebos.com/ch_models/ch_rec_mv3_crnn_infer.tar /home/PaddleOCR/inference
+RUN tar xf /home/PaddleOCR/inference/ch_rec_mv3_crnn_infer.tar -C /home/PaddleOCR/inference
 
 EXPOSE 8866
 
